# contracts

./: .gitignore  Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
.github/actions/initialize/: action.yaml
.github/workflows/: test.yml
deploy/: .env.example  Cargo.toml
deploy/src/: deployer.rs  fixture.rs  lib.rs  main.rs  shared.rs
integration_tests/: Cargo.toml
integration_tests/tests/: harness.rs
integration_tests/tests/utils/: mod.rs
proxy/: Forc.toml
proxy/src/: main.sw
registrar/: Forc.toml
registrar/src/: errors.sw  main.sw
registry/: Forc.toml
registry/src/: errors.sw  main.sw  string_util.sw
resolver/: Forc.toml
resolver/src/: errors.sw  main.sw
shared/: Forc.toml
shared/src/: lib.sw
